@@ -26,9 +26,7 @@ package com.oracle.svm.hosted;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -42,9 +40,12 @@ import java.util.Optional;
 import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.TimerTask;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.ForkJoinTask;
 import java.util.stream.Collectors;
 
-import org.graalvm.collections.Pair;
+import org.graalvm.collections.EconomicMap;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.c.function.CEntryPoint;
 import org.graalvm.nativeimage.c.type.CCharPointerPointer;
@@ -52,20 +53,19 @@ import org.graalvm.nativeimage.c.type.CCharPointerPointer;
 import com.oracle.graal.pointsto.infrastructure.SubstitutionProcessor;
 import com.oracle.graal.pointsto.util.AnalysisError;
 import com.oracle.graal.pointsto.util.AnalysisError.ParsingError;
-import com.oracle.svm.util.GraalAccess;
 import com.oracle.graal.pointsto.util.ParallelExecutionException;
 import com.oracle.graal.pointsto.util.Timer;
 import com.oracle.graal.pointsto.util.Timer.StopTimer;
 import com.oracle.graal.pointsto.util.TimerCollection;
-import com.oracle.svm.core.FallbackExecutor;
 import com.oracle.svm.core.JavaMainWrapper;
 import com.oracle.svm.core.JavaMainWrapper.JavaMainSupport;
-import com.oracle.svm.core.JavaVersionUtil;
+import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.OS;
 import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.imagelayer.LayeredImageOptions;
 import com.oracle.svm.core.option.HostedOptionKey;
+import com.oracle.svm.core.option.LocatableMultiOptionValue;
 import com.oracle.svm.core.option.SubstrateOptionsParser;
-import com.oracle.svm.core.util.BasedOnJDKFile;
 import com.oracle.svm.core.util.ExitStatus;
 import com.oracle.svm.core.util.InterruptImageBuilding;
 import com.oracle.svm.core.util.UserError;
@@ -75,22 +75,35 @@ import com.oracle.svm.hosted.code.CEntryPointData;
 import com.oracle.svm.hosted.image.AbstractImage.NativeImageKind;
 import com.oracle.svm.hosted.imagelayer.HostedImageLayerBuildingSupport;
 import com.oracle.svm.hosted.option.HostedOptionParser;
+import com.oracle.svm.util.AnnotatedObjectAccess;
 import com.oracle.svm.util.ClassUtil;
+import com.oracle.svm.util.GraalAccess;
 import com.oracle.svm.util.LogUtils;
-import com.oracle.svm.util.ReflectionUtil;
-import com.oracle.svm.util.ReflectionUtil.ReflectionUtilError;
+import com.oracle.svm.util.OriginalMethodProvider;
+import com.oracle.svm.util.VMAccessHelper;
 
+import jdk.graal.compiler.annotation.AnnotationValue;
+import jdk.graal.compiler.options.OptionKey;
 import jdk.graal.compiler.options.OptionValues;
+import jdk.graal.compiler.vmaccess.InvocationException;
+import jdk.graal.compiler.vmaccess.VMAccess;
 import jdk.vm.ci.aarch64.AArch64;
 import jdk.vm.ci.amd64.AMD64;
 import jdk.vm.ci.code.Architecture;
+import jdk.vm.ci.meta.JavaConstant;
+import jdk.vm.ci.meta.MetaUtil;
+import jdk.vm.ci.meta.ResolvedJavaMethod;
+import jdk.vm.ci.meta.ResolvedJavaType;
+import jdk.vm.ci.meta.Signature;
 import jdk.vm.ci.riscv64.RISCV64;
 import jdk.vm.ci.runtime.JVMCI;
 
 public class NativeImageGeneratorRunner {
 
-    private volatile NativeImageGenerator generator;
+    public static final String NATIVE_IMAGE_MODULE_PREFIX = "org.graalvm.nativeimage.";
     public static final String IMAGE_BUILDER_ARG_FILE_OPTION = "--image-args-file=";
+
+    private volatile NativeImageGenerator generator;
 
     public enum BuildOutcome {
         SUCCESSFUL,
@@ -105,6 +118,12 @@ public class NativeImageGeneratorRunner {
     public static void main(String[] args) {
         List<NativeImageGeneratorRunnerProvider> providers = new ArrayList<>();
         ServiceLoader.load(NativeImageGeneratorRunnerProvider.class).forEach(providers::add);
+
+        var ueh = ForkJoinPool.commonPool().getUncaughtExceptionHandler();
+        if (!(ueh instanceof CommonPoolUncaughtExceptionHandler)) {
+            throw VMError.shouldNotReachHere("Unable to install " + CommonPoolUncaughtExceptionHandler.class.getName() +
+                            " via java.util.concurrent.ForkJoinPool.common.exceptionHandler system property");
+        }
 
         if (providers.isEmpty()) {
             new NativeImageGeneratorRunner().start(args);
@@ -188,15 +207,11 @@ public class NativeImageGeneratorRunner {
 
     private static void checkBootModuleDependencies(boolean verbose) {
         Set<Module> allModules = ModuleLayer.boot().modules();
-        List<Module> builderModules = allModules.stream().filter(m -> m.isNamed() && m.getName().startsWith("org.graalvm.nativeimage.")).toList();
-        Set<Module> transitiveBuilderModules = new LinkedHashSet<>();
-        for (Module svmModule : builderModules) {
-            transitiveReaders(svmModule, allModules, transitiveBuilderModules);
-        }
+        Set<Module> transitiveBuilderModules = getNativeImageBuilderModules();
         if (verbose) {
             System.out.println(transitiveBuilderModules.stream()
-                    .map(Module::getName)
-                    .collect(Collectors.joining(System.lineSeparator(), "All builder modules: " + System.lineSeparator(), System.lineSeparator())));
+                            .map(Module::getName)
+                            .collect(Collectors.joining(System.lineSeparator(), "All builder modules: " + System.lineSeparator(), System.lineSeparator())));
         }
 
         Set<Module> modulesBuilderDependsOn = new LinkedHashSet<>();
@@ -206,31 +221,53 @@ public class NativeImageGeneratorRunner {
         modulesBuilderDependsOn.removeAll(transitiveBuilderModules);
         if (verbose) {
             System.out.println(modulesBuilderDependsOn.stream()
-                    .map(Module::getName)
-                    .collect(Collectors.joining(System.lineSeparator(), "All modules the builder modules depend on: " + System.lineSeparator(), System.lineSeparator())));
+                            .map(Module::getName)
+                            .collect(Collectors.joining(System.lineSeparator(), "All modules the builder modules depend on: " + System.lineSeparator(), System.lineSeparator())));
         }
 
         Set<String> expectedBuilderDependencies = Set.of(
-                "java.base",
-                "java.instrument",
-                "java.management",
-                "java.logging",
-                // workaround for GR-47773 on the module-path which requires java.sql (like
-                // truffle) or java.xml
-                "java.sql",
-                "java.xml",
-                "java.transaction.xa",
-                "jdk.management",
-                "java.compiler",
-                "jdk.jfr",
-                "jdk.zipfs",
-                "jdk.management.jfr");
+                        "java.base",
+                        "java.instrument",
+                        "java.management",
+                        "java.logging",
+                        // workaround for GR-47773 on the module-path which requires java.sql (like
+                        // truffle) or java.xml
+                        "java.sql",
+                        "java.xml",
+                        "java.transaction.xa",
+                        "jdk.management",
+                        "java.compiler",
+                        "jdk.jfr",
+                        "jdk.zipfs",
+                        "jdk.management.jfr");
 
         Set<String> unexpectedBuilderDependencies = modulesBuilderDependsOn.stream().map(Module::getName).collect(Collectors.toSet());
         unexpectedBuilderDependencies.removeAll(expectedBuilderDependencies);
         if (!unexpectedBuilderDependencies.isEmpty()) {
             throw VMError.shouldNotReachHere("Unexpected image builder module-dependencies: " + String.join(", ", unexpectedBuilderDependencies));
         }
+    }
+
+    /**
+     * Returns what are considered native-image builder modules: those are the modules with prefix
+     * {@value NativeImageGeneratorRunner#NATIVE_IMAGE_MODULE_PREFIX} and their reader modules.
+     */
+    public static Set<Module> getNativeImageBuilderModules() {
+        final var allModules = ModuleLayer.boot().modules();
+        List<Module> builderModules = new ArrayList<>(allModules.size());
+        for (Module m : allModules) {
+            if (m.isNamed()) {
+                if (m.getName().startsWith(NATIVE_IMAGE_MODULE_PREFIX)) {
+                    builderModules.add(m);
+                }
+            }
+        }
+
+        Set<Module> transitiveBuilderModules = new LinkedHashSet<>();
+        for (Module svmModule : builderModules) {
+            transitiveReaders(svmModule, allModules, transitiveBuilderModules);
+        }
+        return transitiveBuilderModules;
     }
 
     public static void transitiveReaders(Module readModule, Set<Module> potentialReaders, Set<Module> actualReaders) {
@@ -248,15 +285,15 @@ public class NativeImageGeneratorRunner {
             if (requiringModule.canRead(potentialNeedModule)) {
                 /* Filter out GraalVM modules */
                 if (potentialNeedModule.getName().equals("jdk.internal.vm.ci") || /* JVMCI */
-                        /* graal */
-                        potentialNeedModule.getName().startsWith("org.graalvm.") ||
-                        potentialNeedModule.getName().startsWith("jdk.graal.compiler") ||
-                        /* enterprise graal */
-                        potentialNeedModule.getName().startsWith("com.oracle.graal.") ||
-                        /* exclude all truffle modules */
-                        potentialNeedModule.getName().startsWith("com.oracle.truffle.") ||
-                        /* llvm-backend optional dependencies */
-                        potentialNeedModule.getName().startsWith("com.oracle.svm.shadowed.")) {
+                                /* graal */
+                                potentialNeedModule.getName().startsWith("org.graalvm.") ||
+                                potentialNeedModule.getName().startsWith("jdk.graal.compiler") ||
+                                /* enterprise graal */
+                                potentialNeedModule.getName().startsWith("com.oracle.graal.") ||
+                                /* exclude all truffle modules */
+                                potentialNeedModule.getName().startsWith("com.oracle.truffle.") ||
+                                /* llvm-backend optional dependencies */
+                                potentialNeedModule.getName().startsWith("com.oracle.svm.shadowed.")) {
                     continue;
                 }
                 if (actualNeededModules.add(potentialNeedModule)) {
@@ -276,12 +313,36 @@ public class NativeImageGeneratorRunner {
         }
     }
 
+    private static VMAccess getVmAccess(String[] classpath, String[] modulepath, HostedOptionParser parser) {
+        VMAccess.Builder builder = GraalAccess.getVmAccessBuilder();
+        builder.classPath(List.of(classpath));
+        builder.modulePath(List.of(modulepath));
+
+        if ("espresso".equals(builder.getVMAccessName())) {
+            // Needed to resolve types in org.graalvm.nativeimage.guest
+            builder.addModule("org.graalvm.nativeimage.guest");
+
+            // Propagate --add-exports into the Espresso guest.
+            // GR-73131 will make this non-Espresso specific.
+            EconomicMap<OptionKey<?>, Object> options = parser.getHostedValues();
+            @SuppressWarnings("unchecked")
+            List<String> addExports = ((LocatableMultiOptionValue<String>) options.get(NativeImageClassLoaderOptions.AddExports)).values();
+            builder.vmOption("java.AddExports=" + String.join(File.pathSeparator, addExports));
+
+            // Guest version of -XX:+EnableJVMCI that is currently passed by
+            // the driver to the builder VM as part of the "graal compiler flags".
+            // See `mx_substratevm.py:compute_graal_compiler_flags_map`
+            builder.vmOption("java.EnableJVMCI=true");
+        }
+        return builder.build();
+    }
+
     /**
      * Installs a class loader hierarchy that resolves classes and resources available in
      * {@code classpath} and {@code modulepath}. The parent for the installed {@code ClassLoader} is
      * the default system class loader (jdk.internal.loader.ClassLoaders.AppClassLoader and
      * sun.misc.Launcher.AppClassLoader for JDK11, 8 respectively).
-     *
+     * <p>
      * We use a custom system class loader {@link NativeImageSystemClassLoader} that delegates to
      * the {@code ClassLoader} that {@link NativeImageClassLoaderSupport} creates, thus allowing the
      * resolution of classes in {@code classpath} and {@code modulepath} via system class loader.
@@ -295,7 +356,9 @@ public class NativeImageGeneratorRunner {
     public static ImageClassLoader installNativeImageClassLoader(String[] classpath, String[] modulepath, List<String> arguments) {
         NativeImageSystemClassLoader nativeImageSystemClassLoader = NativeImageSystemClassLoader.singleton();
         NativeImageClassLoaderSupport nativeImageClassLoaderSupport = new NativeImageClassLoaderSupport(nativeImageSystemClassLoader.defaultSystemClassLoader, classpath, modulepath);
-        nativeImageClassLoaderSupport.setupHostedOptionParser(arguments);
+        HostedOptionParser parser = nativeImageClassLoaderSupport.setupHostedOptionParser(arguments);
+        VMAccess vmAccess = getVmAccess(classpath, modulepath, parser);
+        GraalAccess.plantConfiguration(vmAccess);
         nativeImageClassLoaderSupport.setupLibGraalClassLoader();
         /* Perform additional post-processing with the created nativeImageClassLoaderSupport */
         for (NativeImageClassLoaderPostProcessing postProcessing : ServiceLoader.load(NativeImageClassLoaderPostProcessing.class)) {
@@ -324,7 +387,39 @@ public class NativeImageGeneratorRunner {
          */
         NativeImageOptions.setCommonPoolParallelism(nativeImageClassLoaderSupport.getParsedHostedOptions());
 
-        return new ImageClassLoader(NativeImageGenerator.getTargetPlatform(nativeImageClassLoader), nativeImageClassLoaderSupport);
+        checkCommonPool(nativeImageClassLoader);
+
+        return new ImageClassLoader(NativeImageGenerator.getTargetPlatform(nativeImageClassLoader), nativeImageClassLoaderSupport, vmAccess);
+    }
+
+    /**
+     * Check that tasks executing in the {@linkplain ForkJoinPool#commonPool() common fork-join
+     * pool} see the expected class loader as {@linkplain Thread#getContextClassLoader context class
+     * loader}.
+     */
+    private static void checkCommonPool(ClassLoader expectedLoader) {
+        Runnable check = () -> {
+            ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
+            VMError.guarantee(contextClassLoader == expectedLoader,
+                            "Threads of the common fork-join pool don't see the expected context class loader. " +
+                                            "Expected %s got %s. %n" +
+                                            "To fix this error add -Djava.util.concurrent.ForkJoinPool.common.threadFactory=%s",
+                            expectedLoader, contextClassLoader, NativeImageSystemClassLoader.NativeImageForkJoinWorkerThreadFactory.class.getName());
+        };
+        int parallelism = ForkJoinPool.commonPool().getParallelism();
+        List<ForkJoinTask<?>> tasks = new ArrayList<>(parallelism);
+        for (int i = 0; i < parallelism; i++) {
+            tasks.add(ForkJoinPool.commonPool().submit(check));
+        }
+        try {
+            for (ForkJoinTask<?> task : tasks) {
+                task.get();
+            }
+        } catch (ExecutionException e) {
+            throw VMError.shouldNotReachHere(e.getCause());
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
     }
 
     public static List<String> extractDriverArguments(List<String> args) {
@@ -410,12 +505,12 @@ public class NativeImageGeneratorRunner {
             try (StopTimer _ = classlistTimer.start()) {
                 classLoader.loadAllClasses();
             }
-            if (imageName.length() == 0) {
+            if (imageName.isEmpty()) {
                 throw UserError.abort("No output file name specified. Use '%s'", SubstrateOptionsParser.commandArgument(SubstrateOptions.Name, "<output-file>"));
             }
             try {
-                Map<Method, CEntryPointData> entryPoints = new HashMap<>();
-                Pair<Method, CEntryPointData> mainEntryPointData = Pair.empty();
+                Map<ResolvedJavaMethod, CEntryPointData> entryPoints = new HashMap<>();
+                MainEntryPoint mainEntryPoint = null;
                 JavaMainSupport javaMainSupport = null;
 
                 NativeImageKind imageKind = null;
@@ -425,9 +520,9 @@ public class NativeImageGeneratorRunner {
                 if (isStaticExecutable && isSharedLibrary) {
                     reportConflictingOptions(SubstrateOptions.SharedLibrary, SubstrateOptions.StaticExecutable);
                 } else if (isStaticExecutable && layerCreateOptionEnabled) {
-                    reportConflictingOptions(SubstrateOptions.StaticExecutable, SubstrateOptions.LayerCreate);
+                    reportConflictingOptions(SubstrateOptions.StaticExecutable, LayeredImageOptions.LayerCreate);
                 } else if (isSharedLibrary && layerCreateOptionEnabled) {
-                    reportConflictingOptions(SubstrateOptions.SharedLibrary, SubstrateOptions.LayerCreate);
+                    reportConflictingOptions(SubstrateOptions.SharedLibrary, LayeredImageOptions.LayerCreate);
                 } else if (isSharedLibrary) {
                     imageKind = NativeImageKind.SHARED_LIBRARY;
                 } else if (layerCreateOptionEnabled) {
@@ -442,107 +537,49 @@ public class NativeImageGeneratorRunner {
                 String moduleName = SubstrateOptions.Module.getValue(parsedHostedOptions);
                 if (imageKind.isExecutable && moduleName.isEmpty() && className.isEmpty()) {
                     throw UserError.abort("Must specify main entry point class when building %s native image. Use '%s'.", imageKind,
-                            SubstrateOptionsParser.commandArgument(SubstrateOptions.Class, "<fully-qualified-class-name>"));
+                                    SubstrateOptionsParser.commandArgument(SubstrateOptions.Class, "<fully-qualified-class-name>"));
                 }
 
                 reporter.printStart(imageName, imageKind);
 
                 if (!className.isEmpty() || !moduleName.isEmpty()) {
-                    Method mainEntryPoint;
-                    Class<?> mainClass;
-                    try {
-                        Module mainModule = null;
-                        if (!moduleName.isEmpty()) {
-                            mainModule = classLoader.findModule(moduleName)
-                                    .orElseThrow(() -> UserError.abort("Module " + moduleName + " for mainclass not found."));
-                        }
-                        if (className.isEmpty()) {
-                            className = ImageClassLoader.getMainClassFromModule(mainModule)
-                                    .orElseThrow(() -> UserError.abort("Module %s does not have a ModuleMainClass attribute, use -m <module>/<main-class>", moduleName));
-                        }
-                        mainClass = classLoader.forName(className, mainModule);
-                        if (mainClass == null) {
-                            throw UserError.abort(classLoader.getMainClassNotFoundErrorMessage(className));
-                        }
-                    } catch (ClassNotFoundException ex) {
-                        throw UserError.abort(classLoader.getMainClassNotFoundErrorMessage(className));
-                    } catch (UnsupportedClassVersionError ex) {
-                        if (ex.getMessage().contains("compiled by a more recent version of the Java Runtime")) {
-                            throw UserError.abort("Unable to load '%s' due to a Java version mismatch.%n" +
-                                            "Please take one of the following actions:%n" +
-                                            " 1) Recompile the source files for your application using Java %s, then try running native-image again%n" +
-                                            " 2) Use a version of native-image corresponding to the version of Java with which you compiled the source files for your application%n%n" +
-                                            "Root cause: %s",
-                                    className, JavaVersionUtil.JAVA_SPEC, ex);
-                        } else {
-                            throw UserError.abort(ex.getMessage());
-                        }
-                    }
                     String mainEntryPointName = SubstrateOptions.Method.getValue(parsedHostedOptions);
                     if (mainEntryPointName.isEmpty()) {
                         throw UserError.abort("Must specify main entry point method when building %s native image. Use '%s'.", imageKind,
-                                SubstrateOptionsParser.commandArgument(SubstrateOptions.Method, "<method-name>"));
+                                        SubstrateOptionsParser.commandArgument(SubstrateOptions.Method, "<method-name>"));
                     }
+                    ResolvedJavaMethod mainEntryMethod;
+                    VMAccess vmAccess = classLoader.vmAccess;
                     try {
-                        /*
-                         * First look for a main method with the C-level signature for arguments.
-                         */
-                        mainEntryPoint = mainClass.getDeclaredMethod(mainEntryPointName, int.class, CCharPointerPointer.class);
-                    } catch (NoSuchMethodException ignored2) {
-                        Method javaMainMethod;
-                        /*
-                         * If no C-level main method was found, look for a Java-level main method
-                         * and use our wrapper to invoke it.
-                         */
-                        if ("main".equals(mainEntryPointName)) {
-                            try {
-                                javaMainMethod = findDefaultJavaMainMethod(mainClass);
-                            } catch (InvocationTargetException ex) {
-                                assert ex.getTargetException() instanceof NoSuchMethodException;
-                                throw UserError.abort(ex.getCause(),
-                                        "Method '%s.%s' is declared as the main entry point but it can not be found. " +
-                                                "Make sure that class '%s' is on the classpath and that non-private " +
-                                                "method '%s()' or '%s(String[])'.",
-                                        mainClass.getName(),
-                                        mainEntryPointName,
-                                        mainClass.getName(),
-                                        mainEntryPointName,
-                                        mainEntryPointName);
-                            }
-                        } else {
-                            try {
-                                javaMainMethod = ReflectionUtil.lookupMethod(mainClass, mainEntryPointName, String[].class);
-                                final int mainMethodModifiers = javaMainMethod.getModifiers();
-                                if (!Modifier.isStatic(mainMethodModifiers)) {
-                                    throw UserError.abort("Java main method '%s.%s(String[])' is not static.", mainClass.getName(), mainEntryPointName);
-                                }
-                                if (!Modifier.isPublic(mainMethodModifiers)) {
-                                    throw UserError.abort("Java main method '%s.%s(String[])' is not public.", mainClass.getName(), mainEntryPointName);
-                                }
-                            } catch (ReflectionUtilError ex) {
-                                throw UserError.abort(ex.getCause(),
-                                        "Method '%s.%s' is declared as the main entry point but it can not be found. " +
-                                                "Make sure that class '%s' is on the classpath and that method '%s(String[])' exists in that class.",
-                                        mainClass.getName(),
-                                        mainEntryPointName,
-                                        mainClass.getName(),
-                                        mainEntryPointName);
-                            }
+                        VMAccessHelper h = GraalAccess.getVMAccessHelper();
+                        ResolvedJavaType buildTimeSupport = h.lookupType("com.oracle.svm.guest.hosted.BuildTimeSupport");
+                        ResolvedJavaMethod getMainClassFromModule = h.lookupMethod(buildTimeSupport, "getMainEntryPointMethod",
+                                        String.class,
+                                        String.class,
+                                        String.class);
+                        JavaConstant res = h.invokeStatic(getMainClassFromModule,
+                                        h.asGuestString(className),
+                                        h.asGuestString(moduleName),
+                                        h.asGuestString(mainEntryPointName));
+                        mainEntryMethod = vmAccess.asResolvedJavaMethod(res);
+                    } catch (InvocationException ex) {
+                        if (ex.getCause() instanceof ClassNotFoundException cnfe && cnfe.getMessage().equals(className)) {
+                            throw UserError.abort(classLoader.getMainClassNotFoundErrorMessage(className));
                         }
-
-                        if (javaMainMethod.getReturnType() != void.class) {
-                            throw UserError.abort("Java main method '%s.%s(%s)' does not have the return type 'void'.", mainClass.getName(), mainEntryPointName,
-                                    javaMainMethod.getParameterCount() == 1 ? "String[]" : "");
-                        }
-                        javaMainSupport = createJavaMainSupport(javaMainMethod, classLoader);
-                        mainEntryPoint = getMainEntryMethod(classLoader);
+                        throw UserError.abort(ex, "Error in guest");
                     }
-                    verifyMainEntryPoint(mainEntryPoint);
 
-                    mainEntryPointData = createMainEntryPointData(imageKind, mainEntryPoint);
+                    String cEntryFunctionSig = "(I" + MetaUtil.toInternalName(CCharPointerPointer.class.getName()) + ";)";
+                    if (!mainEntryMethod.getSignature().toMethodDescriptor().startsWith(cEntryFunctionSig)) {
+                        javaMainSupport = createJavaMainSupport((Method) OriginalMethodProvider.getJavaMethod(mainEntryMethod), classLoader);
+                        mainEntryMethod = GraalAccess.lookupMethod(getMainEntryMethod(classLoader));
+                    }
+
+                    verifyMainEntryPoint(mainEntryMethod, classLoader.classLoaderSupport.annotationExtractor);
+                    mainEntryPoint = createMainEntryPoint(imageKind, mainEntryMethod);
                 }
 
-                generator = createImageGenerator(classLoader, optionParser, mainEntryPointData, reporter);
+                generator = createImageGenerator(classLoader, optionParser, mainEntryPoint, reporter);
                 generator.run(entryPoints, javaMainSupport, imageName, imageKind, SubstitutionProcessor.IDENTITY, optionParser.getRuntimeOptionNames(), timerCollection);
                 buildOutcome = BuildOutcome.SUCCESSFUL;
             } finally {
@@ -558,13 +595,6 @@ public class NativeImageGeneratorRunner {
                 }
             }
             throw e;
-        } catch (FallbackFeature.FallbackImageRequest e) {
-            if (FallbackExecutor.class.getName().equals(SubstrateOptions.Class.getValue())) {
-                NativeImageGeneratorRunner.reportFatalError(e, "FallbackImageRequest while building fallback image.");
-                return ExitStatus.BUILDER_ERROR.getValue();
-            }
-            reportUserException(e, parsedHostedOptions);
-            return ExitStatus.FALLBACK_IMAGE.getValue();
         } catch (ParsingError e) {
             NativeImageGeneratorRunner.reportFatalError(e);
             return ExitStatus.BUILDER_ERROR.getValue();
@@ -601,25 +631,11 @@ public class NativeImageGeneratorRunner {
         return ExitStatus.OK.getValue();
     }
 
-    /*
-     * Finds the main method using the {@code jdk.internal.misc.MethodFinder}.
-     *
-     * The {@code MethodFinder} was introduced by JDK-8344706 (Implement JEP 512: Compact Source
-     * Files and Instance Main Methods) and will perform all the necessary checks.
-     */
-    @BasedOnJDKFile("https://github.com/openjdk/jdk/blob/jdk-25+24/src/java.base/share/classes/jdk/internal/misc/MethodFinder.java#L45-L106")
-    private static Method findDefaultJavaMainMethod(Class<?> mainClass) throws IllegalAccessException, InvocationTargetException {
-        Class<?> mainMethodFinder = ReflectionUtil.lookupClass(false, "jdk.internal.misc.MethodFinder");
-        Method findMainMethod = ReflectionUtil.lookupMethod(mainMethodFinder, "findMainMethod", Class.class);
-        /*
-         * We are using Method.invoke and throwing checked exceptions on purpose instead of
-         * ReflectionUtil to issue a proper error message.
-         */
-        Method invoke = (Method) findMainMethod.invoke(null, mainClass);
-        /*
-         * Use ReflectionUtil get a Method object with the right accessibility.
-         */
-        return ReflectionUtil.lookupMethod(invoke.getDeclaringClass(), invoke.getName(), invoke.getParameterTypes());
+    protected void verifyMainEntryPoint(ResolvedJavaMethod mainEntryPoint, AnnotatedObjectAccess annotationAccess) {
+        AnnotationValue cEntryPoint = annotationAccess.getAnnotationValue(mainEntryPoint, CEntryPoint.class);
+        if (cEntryPoint == null) {
+            throw UserError.abort("Entry point '%s' must have the '@%s' annotation", mainEntryPoint.format("%R %H.%n(%P)"), CEntryPoint.class.getSimpleName());
+        }
     }
 
     private static void reportConflictingOptions(HostedOptionKey<Boolean> o1, HostedOptionKey<?> o2) {
@@ -630,18 +646,19 @@ public class NativeImageGeneratorRunner {
         reporter.printEpilog(Optional.ofNullable(imageName), Optional.ofNullable(generator), classLoader, buildOutcome, Optional.ofNullable(unhandledThrowable), parsedHostedOptions);
     }
 
-    protected NativeImageGenerator createImageGenerator(ImageClassLoader classLoader, HostedOptionParser optionParser, Pair<Method, CEntryPointData> mainEntryPointData, ProgressReporter reporter) {
-        return new NativeImageGenerator(classLoader, optionParser, mainEntryPointData, reporter);
+    protected NativeImageGenerator createImageGenerator(ImageClassLoader classLoader, HostedOptionParser optionParser, MainEntryPoint mainEntryPoint,
+                    ProgressReporter reporter) {
+        return new NativeImageGenerator(classLoader, optionParser, mainEntryPoint, reporter);
     }
 
-    protected Pair<Method, CEntryPointData> createMainEntryPointData(NativeImageKind imageKind, Method mainEntryPoint) {
-        Pair<Method, CEntryPointData> mainEntryPointData;
-        Class<?>[] pt = mainEntryPoint.getParameterTypes();
-        if (pt.length != 2 || pt[0] != int.class || pt[1] != CCharPointerPointer.class || mainEntryPoint.getReturnType() != int.class) {
-            throw UserError.abort("Main entry point must have signature 'int main(int argc, CCharPointerPointer argv)'.");
+    protected MainEntryPoint createMainEntryPoint(NativeImageKind imageKind, ResolvedJavaMethod mainEntryMethod) {
+        Signature sig = mainEntryMethod.getSignature();
+        String expect = "(I%s)I".formatted(MetaUtil.toInternalName(CCharPointerPointer.class.getName()));
+        String actual = sig.toMethodDescriptor();
+        if (!actual.equals(expect)) {
+            throw UserError.abort("Main entry point must have signature '%s', not '%s'.", expect, actual);
         }
-        mainEntryPointData = Pair.create(mainEntryPoint, CEntryPointData.create(mainEntryPoint, imageKind.mainEntryPointName));
-        return mainEntryPointData;
+        return new MainEntryPoint(mainEntryMethod, () -> CEntryPointData.create(mainEntryMethod, imageKind.mainEntryPointName));
     }
 
     protected Method getMainEntryMethod(@SuppressWarnings("unused") ImageClassLoader classLoader) throws NoSuchMethodException {
@@ -650,13 +667,6 @@ public class NativeImageGeneratorRunner {
 
     protected JavaMainSupport createJavaMainSupport(Method javaMainMethod, @SuppressWarnings("unused") ImageClassLoader classLoader) throws IllegalAccessException {
         return new JavaMainSupport(javaMainMethod);
-    }
-
-    protected void verifyMainEntryPoint(Method mainEntryPoint) {
-        CEntryPoint annotation = mainEntryPoint.getAnnotation(CEntryPoint.class);
-        if (annotation == null) {
-            throw UserError.abort("Entry point must have the '@%s' annotation", CEntryPoint.class.getSimpleName());
-        }
     }
 
     public static boolean verifyValidJavaVersionAndPlatform() {
