@@ -27,7 +27,6 @@ package com.oracle.svm.hosted.substitute;
 import static com.oracle.svm.core.util.VMError.shouldNotReachHere;
 import static com.oracle.svm.core.util.VMError.shouldNotReachHereUnexpectedInput;
 
-import java.lang.annotation.Annotation;
 import java.lang.invoke.MethodHandle;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
@@ -63,6 +62,7 @@ import jdk.vm.ci.meta.ResolvedJavaType;
 import jdk.vm.ci.meta.Signature;
 import jdk.vm.ci.meta.SpeculationLog;
 import jdk.vm.ci.meta.annotation.Annotated;
+import jdk.vm.ci.meta.annotation.AnnotationsInfo;
 
 /**
  * Creates a wrapper around a {@link java.lang.invoke.MethodHandle}.PolymorphicSignature method that
@@ -96,7 +96,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
         List<ValueNode> args = new ArrayList<>(kit.getInitialArguments());
         ValueNode receiver = null;
         if (!substitutionBaseMethod.isStatic()) {
-            receiver = args.remove(0);
+            receiver = args.removeFirst();
         }
 
         ValueNode parameterArray = kit.append(new NewArrayNode(kit.getMetaAccess().lookupJavaType(Object.class), kit.createInt(args.size()), true));
@@ -128,8 +128,8 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                  * types only). For example, int value = mh.invokeBasic(...) where
                  * mh.type().returnType() == short.class.
                  *
-                 * This doesn't cause trouble in HotSpot since these values can be silently casted
-                 * to the expected type. However, since Native Image handles the return value as a
+                 * This doesn't cause trouble in HotSpot since these values can be silently cast to
+                 * the expected type. However, since Native Image handles the return value as a
                  * boxed object, it needs to explicitly cast it to the required type to avoid tricky
                  * bugs to occur.
                  *
@@ -150,7 +150,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                     ValueNode methodHandleOrMemberName;
                     AnalysisMethod unboxMethod;
                     try {
-                        String unboxMethodName = returnKind.toString() + "Unbox";
+                        String unboxMethodName = returnKind + "Unbox";
                         switch (substitutionBaseMethod.getName()) {
                             case "invokeBasic":
                             case "invokeExact":
@@ -163,7 +163,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                             case "linkToStatic":
                             case "linkToInterface":
                             case "linkToSpecial":
-                                methodHandleOrMemberName = args.get(args.size() - 1);
+                                methodHandleOrMemberName = args.getLast();
                                 unboxMethod = kit.getMetaAccess().lookupJavaMethod(
                                                 MethodHandleUtils.class.getMethod(unboxMethodName, Object.class, Target_java_lang_invoke_MemberName.class));
                                 break;
@@ -293,11 +293,6 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
     }
 
     @Override
-    public Annotation[][] getParameterAnnotations() {
-        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
-    }
-
-    @Override
     public Type[] getGenericParameterTypes() {
         throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
     }
@@ -350,5 +345,15 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
     @Override
     public int getModifiers() {
         return substitutionBaseMethod.getModifiers();
+    }
+
+    @Override
+    public AnnotationsInfo getParameterAnnotationInfo() {
+        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
+    }
+
+    @Override
+    public AnnotationsInfo getAnnotationDefaultInfo() {
+        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
     }
 }
